--- a/src/ui/package.json
+++ b/src/ui/package.json
@@ -49,8 +49,7 @@
     "babel-core": "^6.24.1",
     "babel-loader": "^7.0.0",
     "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-es2016": "^6.24.1",
+    "babel-preset-env": "^1.6.0",
     "css-loader": "0.28.4",
     "event-source-polyfill": "^0.0.9",
     "file-loader": "0.11.1",
