updated ui deps to latest minor versions

--- a/src/ui/package.json
+++ b/src/ui/package.json
@@ -22,19 +22,19 @@
     "debug": "node --nolazy --debug-brk=5858 ./node_modules/webpack/bin/webpack.js -p --config webpack.config.js"
   },
   "dependencies": {
-    "axios": "0.16.1",
+    "axios": "^0.16.2",
     "babel-polyfill": "^6.20.0",
     "babel-runtime": "^6.23.0",
     "base-64": "^0.1.0",
     "bootstrap": "4.0.0-beta",
     "client-oauth2": "^4.1.0",
-    "font-awesome": "4.7.0",
-    "jquery": "3.2.1",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.2.1",
     "jwt-decode": "^2.2.0",
-    "popper.js": "1.12.5",
-    "typescript": "2.3.4",
+    "popper.js": "^1.12.5",
+    "typescript": "^2.5.2",
     "vue": "^2.3.3",
-    "vue-class-component": "5.0.1",
+    "vue-class-component": "^5.0.2",
     "vue-i18n": "^7.0.1",
     "vue-router": "^2.5.3",
     "vuelidate": "^0.5.0",
@@ -50,21 +50,21 @@
     "babel-loader": "^7.0.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.0",
-    "css-loader": "0.28.4",
+    "css-loader": "^0.28.7",
     "event-source-polyfill": "^0.0.9",
-    "file-loader": "0.11.1",
+    "file-loader": "^0.11.2",
     "html-webpack-plugin": "2.28.0",
     "node-sass": "^4.5.3",
-    "postcss-loader": "2.0.5",
+    "postcss-loader": "^2.0.6",
     "precss": "^2.0.0",
-    "sass-loader": "6.0.5",
-    "style-loader": "0.18.1",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.18.2",
     "ts-loader": "^2.1.0",
-    "url-loader": "0.5.8",
+    "url-loader": "^0.5.9",
     "vue-hot-typescript-loader": "^0.0.1",
-    "vue-html-loader": "1.2.4",
+    "vue-html-loader": "^1.2.4",
     "webpack": "^2.6.1",
     "webpack-hot-middleware": "^2.18.0",
-    "webpack-merge": "4.1.0"
+    "webpack-merge": "^4.1.0"
   }
 }
