--- a/src/ui/package.json
+++ b/src/ui/package.json
@@ -43,13 +43,14 @@
     "vuex-class": "^0.2.0"
   },
   "devDependencies": {
-    "@types/node": "^7.0.23",
+    "@types/node": "7.0.23",
     "aspnet-webpack": "2.0.1",
     "autoprefixer": "7.1.4",
     "babel-core": "6.26.0",
     "babel-loader": "7.1.2",
     "babel-plugin-transform-runtime": "6.23.0",
     "babel-preset-env": "1.6.0",
+    "babel-minify-webpack-plugin": "0.2.0",
     "css-loader": "0.28.7",
     "file-loader": "0.11.2",
     "html-webpack-plugin": "2.30.1",
