--- a/src/ui/package.json
+++ b/src/ui/package.json
@@ -48,12 +48,17 @@
     "autoprefixer": "7.1.4",
     "babel-core": "6.26.0",
     "babel-loader": "7.1.2",
+    "babel-minify-webpack-plugin": "0.2.0",
     "babel-plugin-transform-runtime": "6.23.0",
     "babel-preset-env": "1.6.0",
-    "babel-minify-webpack-plugin": "0.2.0",
     "css-loader": "0.28.7",
+    "ejs-loader": "^0.3.0",
+    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "0.11.2",
+    "html-webpack-exclude-assets-plugin": "0.0.5",
     "html-webpack-plugin": "2.30.1",
+    "lodash": "^4.17.4",
+    "lodash-ts-imports-loader": "^1.1.2",
     "node-sass": "4.5.3",
     "postcss-loader": "2.0.6",
     "sass-loader": "6.0.6",
