fix : bootstrap menu issue + updated all imports to es2015

--- a/src/ui/tsconfig.json
+++ b/src/ui/tsconfig.json
@@ -9,7 +9,7 @@
       "es6"
     ],
     "listEmittedFiles": false,
-    "module": "commonjs",
+    "module": "es2015",
     "moduleResolution": "Node",
     "target": "es2015",
     "traceResolution": true,
