--- a/src/server/server.csproj
+++ b/src/server/server.csproj
@@ -49,6 +49,7 @@
     <PackageReference Include="StructureMap.Microsoft.DependencyInjection" Version="1.3.1" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.1.4" />
     <PackageReference Include="System.Reflection" Version="4.3.0" />
+    <PackageReference Include="Wangkanai.Detection" Version="2.0.0-beta8"/>
   </ItemGroup>
   <ItemGroup>
     <Content Update="*.json;wwwroot/**/*;Resources/**/*.*;" CopyToPublishDirectory="Never" />
