upgraded to .NET Core 2.1
- now using Microsoft.AspNetCore.All reference moniker

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -74,7 +74,8 @@
             "options": {
                 "cwd": "${workspaceRoot}/src/ui"
             },
-            "group": "build"
+            "group": "build",
+            "problemMatcher": []
         },
         {
             "label": "publish",
