upgraded all ui dependencies, which required build configuration changes

--- a/src/ui/package.json
+++ b/src/ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "toucan.ui",
-  "version": "2.1.7",
+  "version": "3.0.0",
   "description": "UI project for Toucan template",
   "keywords": [
     "vuejs",
@@ -22,55 +22,54 @@
     "debug": "node --nolazy --debug-brk=5858 ./node_modules/webpack/bin/webpack.js -p --config webpack.config.js"
   },
   "dependencies": {
-    "@types/webpack": "^3.0.12",
-    "axios": "^0.16.2",
-    "babel-polyfill": "^6.20.0",
-    "babel-runtime": "^6.23.0",
-    "base-64": "^0.1.0",
-    "bootstrap": "4.0.0-beta",
-    "client-oauth2": "^4.1.0",
-    "font-awesome": "^4.7.0",
-    "jquery": "^3.2.1",
-    "jwt-decode": "^2.2.0",
-    "popper.js": "^1.12.5",
-    "typescript": "^2.5.2",
-    "vue": "^2.5.2",
-    "vue-class-component": "^6.0.0",
-    "vue-i18n": "^7.3.3",
-    "vue-model-date": "^1.0.5",
-    "vue-router": "^3.0.1",
-    "vuelidate": "^0.5.0",
-    "vuex": "^3.0.0",
-    "vuex-class": "^0.3.0"
+    "@types/webpack": "4.4.5",
+    "axios": "0.18.0",
+    "babel-polyfill": "6.26.0",
+    "babel-runtime": "6.26.0",
+    "base-64": "0.1.0",
+    "bootstrap": "4.1.1",
+    "client-oauth2": "4.2.1",
+    "font-awesome": "4.7.0",
+    "jquery": "3.3.1",
+    "jwt-decode": "2.2.0",
+    "popper.js": "1.14.3",
+    "typescript": "2.9.2",
+    "vue": "2.5.16",
+    "vue-class-component": "6.2.0",
+    "vue-i18n": "8.0.0",
+    "vue-model-date": "1.0.5",
+    "vue-router": "3.0.1",
+    "vuelidate": "0.7.4",
+    "vuex": "3.0.1",
+    "vuex-class": "0.3.1"
   },
   "devDependencies": {
-    "@types/node": "7.0.23",
-    "aspnet-webpack": "2.0.1",
-    "autoprefixer": "7.1.4",
-    "babel-core": "6.26.0",
-    "babel-loader": "7.1.2",
-    "babel-minify-webpack-plugin": "0.2.0",
+    "@types/node": "10.5.2",
+    "aspnet-webpack": "3.0.0",
+    "autoprefixer": "8.6.5",
+    "babel-core": "6.26.3",
+    "babel-loader": "7.1.5",
     "babel-plugin-transform-runtime": "6.23.0",
-    "babel-preset-env": "1.6.0",
-    "css-loader": "0.28.7",
-    "ejs-loader": "^0.3.0",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "0.11.2",
-    "html-webpack-exclude-assets-plugin": "0.0.5",
-    "html-webpack-plugin": "2.30.1",
-    "lodash": "^4.17.4",
-    "lodash-ts-imports-loader": "^1.1.2",
-    "node-sass": "4.5.3",
-    "postcss-loader": "2.0.6",
-    "sass-loader": "6.0.6",
-    "style-loader": "0.18.2",
-    "ts-loader": "2.3.7",
-    "url-loader": "0.5.9",
+    "babel-preset-env": "1.7.0",
+    "css-loader": "1.0.0",
+    "ejs-loader": "0.3.1",
+    "extract-text-webpack-plugin": "3.0.2",
+    "file-loader": "1.1.11",
+    "html-webpack-plugin": "3.2.0",
+    "lodash": "4.17.10",
+    "lodash-ts-imports-loader": "1.2.0",
+    "mini-css-extract-plugin": "0.4.1",
+    "node-sass": "4.9.2",
+    "sass-loader": "7.0.3",
+    "style-loader": "0.21.0",
+    "ts-loader": "4.4.2",
+    "url-loader": "1.0.1",
     "vue-hot-typescript-loader": "0.0.1",
     "vue-html-loader": "1.2.4",
-    "vue-i18n": "^7.3.3",
-    "webpack": "^3.11.0",
-    "webpack-hot-middleware": "2.19.1",
-    "webpack-merge": "4.1.0"
+    "vue-i18n": "8.0.0",
+    "webpack": "4.15.1",
+    "webpack-cli": "3.0.8",
+    "webpack-dev-middleware": "3.1.3",
+    "webpack-hot-middleware": "2.22.2"
   }
 }
